--- a/src/App.module.css
+++ b/src/App.module.css
@@ -440,12 +440,12 @@
     font-family: "Hepta Slab", sans-serif;
     font-weight: 500;
     font-size: 22px;
-    line-height: 1;
     letter-spacing: -0.01em;
     text-transform: uppercase;
     color: #000;
     margin-bottom: 16px;
-    margin-right: 20px;
+    margin-right: 30px;
+    line-height: normal;
 }
 
 .infoQuoteIcon {
