--- a/src/App.module.css
+++ b/src/App.module.css
@@ -142,11 +142,10 @@
     right: 20px;
     z-index: 10;
     display: flex;
-    gap: 17.6px;
+    gap: 10px;
     border-radius: 80px;
-    width: 476px;
     padding: 30px 36px;
-    max-width: 480px;
+    max-width: 524px;
     backdrop-filter: blur(25px);
     box-shadow: inset 0 0 4px 0 rgba(255, 255, 255, 0.5);
     background: linear-gradient(180deg, rgba(244, 244, 244, 0.5) 0%, rgba(255, 255, 255, 0.5) 100%);
@@ -159,12 +158,13 @@
 .quoteIcon {
     width: 60px;
     height: 40px;
+    margin-top: 4px;
 }
 
 .title {
     font-family: "Hepta Slab", sans-serif;
     font-weight: 500;
-    font-size: 32px;
+    font-size: 24px;
     line-height: 1;
     letter-spacing: -0.01em;
     text-transform: uppercase;
@@ -176,11 +176,17 @@
     font-weight: 400;
     font-size: 16px;
     color: #26282c;
+    line-height: 1.3;
 }
 
-@media (max-width: 1250px) {
+.description > div:first-child {
+    margin-top: 10px;
+}
+
+
+@media (max-width: 1300px) {
     .card {
-        max-width: 336px;
+        max-width: 440px;
         gap: 8.6px;
         border-radius: 50px;
         padding: 20px 30px;
@@ -200,7 +206,7 @@
     }
 }
 
-@media (max-width: 1110px) {
+@media (max-width: 1210px) {
     .card {
         top: unset;
         bottom: 20px;
