--- a/src/components/BurgerIcon/BurgerIcon.module.css
+++ b/src/components/BurgerIcon/BurgerIcon.module.css
@@ -5,7 +5,7 @@
     z-index: 21;
     background-color: #444;
     border-radius: 8px;
-    border: 2px solid #fff;
+    border: 1px solid #666;
     padding: 8px;
     cursor: pointer;
     display: flex;
@@ -16,11 +16,6 @@
 
 .burgerButton:hover {
     background-color: #555;
-}
-
-.burgerButton:focus {
-    outline: none;
-    box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.5);
 }
 
 .burgerIcon {
