--- a/src/App.module.css
+++ b/src/App.module.css
@@ -142,7 +142,7 @@
     display: flex;
     gap: 10px;
     border-radius: 80px;
-    padding: 30px 36px;
+    padding: 30px 36px 44px;
     max-width: 524px;
     backdrop-filter: blur(25px);
     box-shadow: inset 0 0 4px 0 rgba(255, 255, 255, 0.5);
@@ -176,10 +176,12 @@
     color: #26282c;
     line-height: 1.2;
     list-style: none;
+    overflow: hidden;
+    transition: height 0.4s ease;
 }
 
 .description > li:first-child {
-    margin-top: 10px;
+    /*margin-top: 10px;*/
 }
 
 
@@ -203,6 +205,24 @@
     .description {
         font-size: 14px;
     }
+}
+
+.arrow {
+    position: absolute;
+    left: 50%;
+    bottom: 4px;
+    font-size: 24px;
+    text-align: center;
+    margin-top: 10px;
+    user-select: none;
+    color: #666;
+    transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+    transform-origin: center;
+    transform: rotate(0deg);
+}
+
+.arrow.open {
+    transform: rotate(180deg);
 }
 
 @media (max-width: 1210px) {
