--- a/src/App.module.css
+++ b/src/App.module.css
@@ -177,20 +177,44 @@
     line-height: 1.2;
     list-style: none;
     overflow: hidden;
+}
+
+.description ul {
     transition: height 0.4s ease;
+
 }
 
 .description > li:first-child {
-    /*margin-top: 10px;*/
+    margin-top: 10px;
 }
 
+.arrow {
+    position: absolute;
+    left: 50%;
+    bottom: 4px;
+    font-size: 24px;
+    text-align: center;
+    user-select: none;
+    color: #666;
+    transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+    transform-origin: center;
+    transform: rotate(0deg);
+}
+
+.arrow.open {
+    transform: rotate(180deg);
+}
 
 @media (max-width: 1300px) {
     .card {
         max-width: 440px;
         gap: 8.6px;
         border-radius: 50px;
-        padding: 20px 30px;
+        padding: 20px 30px 30px;
+    }
+
+    .arrow {
+        bottom: -2px;
     }
 
     .title {
@@ -205,24 +229,6 @@
     .description {
         font-size: 14px;
     }
-}
-
-.arrow {
-    position: absolute;
-    left: 50%;
-    bottom: 4px;
-    font-size: 24px;
-    text-align: center;
-    margin-top: 10px;
-    user-select: none;
-    color: #666;
-    transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-    transform-origin: center;
-    transform: rotate(0deg);
-}
-
-.arrow.open {
-    transform: rotate(180deg);
 }
 
 @media (max-width: 1210px) {
