fix: resize logotypes

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -67,12 +67,11 @@
 .logosWrapper {
     display: flex;
     align-items: center;
-    gap: 80px;
+    gap: 50px;
     padding: 26px 0 26px 110px;
 }
 
 .logotype {
-    height: 90px;
     width: auto;
     max-width: 100%;
     padding: 0;
@@ -82,6 +81,16 @@
     -ms-user-select: none;
     pointer-events: none;
     -webkit-user-drag: none;
+}
+
+.logotypeFirst {
+    composes: logotype;
+    height: 98px;
+}
+
+.logotypeSecond {
+    composes: logotype;
+    height: 54px;
 }
 
 .quoteIcon, .logotype {
